--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sky-Burger</title>
     <link rel="stylesheet" href="style/index.css">
-    <link rel="icon" type="image/png" href="public/LOGO FONDO NEGRO.png">
+    <link rel="icon" type="image/png" href="public/LOGO PRINCIPAL.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap" rel="stylesheet">
@@ -16,6 +16,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Animate.css 2025 – versión más rápida y con más efectos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- Fancybox CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css" />
 </head>
 
 <body class="">
@@ -75,11 +77,11 @@
 
             <div class="m-3 flex flex-col items-start space-y-4 md:w-1/2 md:gap-4">
                 <h5
-                    class="text-lg md:text-2xl quicksand-1 font-bold text-color-2 uppercase tracking-wide md:text-red-500  animate__animated animate__fadeInDownBig ">
+                    class="text-lg md:text-2xl quicksand-1 font-bold text-color-2 uppercase tracking-wide md:text-red-500 " data-animate="animate__fadeInDownBig" >
                     Hamburguesas cada día
                 </h5>
                 <h2
-                    class="text-4xl md:text-6xl fredoka-1 uppercase font-semibold text-color-3 drop-shadow-lg animate__fadeInDownBig animar-al-scroll animate__animated">
+                    class="text-4xl md:text-6xl fredoka-1 uppercase font-semibold text-color-3 drop-shadow-lg " data-animate="animate__fadeInDownBig" >
                     Amor por las hamburguesas
                 </h2>
 
@@ -98,7 +100,7 @@
             </div>
 
             <div class="relative flex justify-center md:h-full">
-                <div class="absolute top-3 left-3 color-2 starburst flex flex-col items-center justify-center text-center md:bg-red-500 animate__animated animate__fadeInDownBig animate__slow"
+                <div class="absolute top-3 left-3 color-2 starburst flex flex-col items-center justify-center text-center md:bg-red-500 animate__infinite" data-animate="animate__pulse"
                     style="--size: 120px;">
                     <h5 class="text-sm font-extrabold text-color-1 drop-shadow md:text-black">Desde</h5>
                     <h3 class="text-2xl font-extrabold text-white drop-shadow-md">$5.000</h3>
@@ -115,7 +117,7 @@
     <section class="h-screen color-3 flex flex-col p-5 md:flex-row md:justify-center md:items-center md:px-12 lg:px-36">
 
         <div class="flex flex-col fredoka-1 gap-4 md:w-1/2 md:gap-6 md:pr-8">
-            <h3 class="font-bold text-2xl uppercase text-color-2 md:text-3xl lg:text-4xl animar-al-scroll animate__backInDown">
+            <h3 class="font-bold text-2xl uppercase text-color-2 md:text-3xl lg:text-4xl" data-animate="animate__backInDown">
                 Las mejores Burgers de Tinogasta
             </h3>
             <h5 class="quicksand-1 font-medium text-xl text-color-2 md:text-2xl">
@@ -126,7 +128,7 @@
             </p>
 
             <a href="page/nosotros.html"
-                class="flex items-center gap-2 self-start rounded-full color-1 px-6 py-3 md:px-7 text-sm md:text-base font-semibold uppercase tracking-wide transition-all duration-300 shadow-sm hover:scale-105 hover:bg-black hover:text-red-500 text-color-3">
+                class="flex items-center gap-2 self-start rounded-full color-1 px-6 py-3 md:px-7 text-sm md:text-base font-semibold uppercase tracking-wide transition-all duration-300 shadow-sm hover:scale-105 hover:bg-black hover:text-red-500 text-color-3 animate__faster" data-animate="animate__backInLeft">
                 Nosotros
             </a>
         </div>
@@ -135,7 +137,7 @@
 
             <div class="flex flex-col items-center">
                 <a href="page/menu.html"
-                    class="flex justify-center items-center color-1 rounded-full p-4 m-2 hover:scale-110 transition-transform">
+                    class="flex justify-center items-center color-1 rounded-full p-4 m-2 hover:scale-110 transition-transform" data-animate="animate__backInRight">
                     <img src="public/icons/hamburguesa (1).png" alt="Carne de calidad"
                         class="w-12 h-12 md:w-14 md:h-14">
                 </a>
@@ -146,7 +148,7 @@
 
             <div class="flex flex-col items-center">
                 <a href="page/menu.html"
-                    class="flex justify-center items-center color-1 rounded-full p-4 m-2 hover:scale-110 transition-transform">
+                    class="flex justify-center items-center color-1 rounded-full p-4 m-2 hover:scale-110 transition-transform animate__faster" data-animate="animate__backInRight">
                     <img src="public/icons/entrega-de-comida.png" alt="Delivery" class="w-12 h-12 md:w-14 md:h-14">
                 </a>
                 <h4 class="fredoka-1 font-semibold uppercase text-color-2 text-xs md:text-sm mt-1">
@@ -156,7 +158,7 @@
 
             <div class="flex flex-col items-center">
                 <a href="page/menu.html"
-                    class="flex justify-center items-center color-1 rounded-full p-4 m-2 hover:scale-110 transition-transform">
+                    class="flex justify-center items-center color-1 rounded-full p-4 m-2 hover:scale-110 transition-transform" data-animate="animate__backInRight">
                     <img src="public/icons/cocinando.png" alt="Sazón único" class="w-12 h-12 md:w-14 md:h-14">
                 </a>
                 <h4 class="fredoka-1 font-semibold uppercase text-color-2 text-xs md:text-sm mt-1">
@@ -166,7 +168,7 @@
 
             <div class="flex flex-col items-center">
                 <a href="page/menu.html"
-                    class="flex justify-center items-center color-1 rounded-full p-4 m-2 hover:scale-110 transition-transform">
+                    class="flex justify-center items-center color-1 rounded-full p-4 m-2 hover:scale-110 transition-transform animate__faster" data-animate="animate__backInRight">
                     <img src="public/icons/tabla-de-cortar.png" alt="Ingredientes frescos"
                         class="w-12 h-12 md:w-14 md:h-14">
                 </a>
@@ -181,7 +183,7 @@
 
     <section class="h-screen quicksand-1 color-2 p-4 md:px-10 lg:px-36 lg:py-14">
         <div
-            class="w-full h-full bg-cover bg-center rounded-xl md:hover:scale-105 hover:shadow-md hover:shadow-gray-200/50 transition-all duration-300 flex flex-col items-center justify-end text-center p-6 gap-4 md:shadow-md md:shadow-black lg:items-start lg:text-left text-white  bg-[url('./public/pruebas/listas/5.png')] md:bg-[url('./public/pruebas/listas/10.png')]">
+            class="w-full h-full bg-cover bg-center rounded-xl md:hover:scale-105 hover:shadow-md hover:shadow-gray-200/50 transition-all duration-300 flex flex-col items-center justify-end text-center p-6 gap-4 md:shadow-md md:shadow-black lg:items-start lg:text-left text-white  bg-[url('./public/pruebas/listas/5.png')] md:bg-[url('./public/pruebas/listas/10.png')]" data-animate="animate__flipInX">
 
             <h2 class="fredoka-1 font-extrabold text-4xl md:text-5xl">Nuestra hamburguesería</h2>
             <h6 class="text-2xl md:text-3xl">Es una nueva experiencia de sabor</h6>
@@ -366,6 +368,9 @@
 
 
     <script src="script/codex.js"></script>
+    <!-- Fancybox JS -->
+<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.umd.js"></script>
+
 </body>
 
 </html>
